Reparación de bug de base de datos relacionado con los PM y PH || Listado de personajes v0.8

--- a/View/css/crearPersonaje.css
+++ b/View/css/crearPersonaje.css
@@ -198,3 +198,16 @@ label[for=fotoPersonaje]:before {
 .formulario .btnSubmit:hover{
     background-color:rgb(228, 18, 165);
 }
+
+.tituloStats{
+    color:#3499db;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.pm{
+    color: blue;
+}
+
+.ph{
+    color: green;
+}
