Listado de personajes v0.9 || Pre-css de ventana modal y botones stats

--- a/View/css/crearPersonaje.css
+++ b/View/css/crearPersonaje.css
@@ -206,8 +206,10 @@ label[for=fotoPersonaje]:before {
 
 .pm{
     color: blue;
+    margin-right: 5px;
 }
 
 .ph{
     color: green;
+    margin-right: 5px;
 }
