Versión de lista de personajes v0.95 || Precreación de ventana y BD de habilidades

--- a/View/css/crearPersonaje.css
+++ b/View/css/crearPersonaje.css
@@ -205,11 +205,11 @@ label[for=fotoPersonaje]:before {
 }
 
 .pm{
-    color: blue;
+    color: rgb(0, 110, 255);
     margin-right: 5px;
 }
 
 .ph{
-    color: green;
+    color: rgb(17, 212, 17);
     margin-right: 5px;
 }
