--- a/View/css/listadoPersonajes.css
+++ b/View/css/listadoPersonajes.css
@@ -13,13 +13,13 @@
 .fotoPersonaje{
     display: flex;
     flex-direction: column;
+    border:2px solid rgb(228, 18, 165);
+    height: 286px;
 }
 
 .infoPersonaje{
     margin-left: 20px;
     color: white;
-    /* display: flex;
-    flex-direction: row; */
 }
 
 .infoPersonaje p span{
@@ -29,32 +29,73 @@
 }
 
 .imagenPersonaje{
-    height: 300px;
+    height: 286px;
     width: 250px;
 }
 
 .ventanaModal{
     width: 300px;
-    height: 300px;
-    background-color: white;
+    height: 280px;
+    background-color: #494747fb;
     opacity: 0.7;
     visibility: hidden;
     position: fixed;
     left: 40%;
+    color: white;
 }
 
 .ventanaModal .contenedorStats .stats{
     display: flex;
     flex-direction: row;
     margin-bottom: 10px;
+    align-items: center;
 }
 
 .ventanaModal .contenedorStats .stats img{
     margin-right: 10px;
 }
 
+.ventanaModal .contenedorStats .stats .textoStat{
+    margin-right: 10px;
+    font-weight: bold;
+}
+
 .ventanaModal .contenedorStats{
     display: flex;
     flex-direction: column;
     margin:20px;
+}
+
+.encabezadoVentana{
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
+    align-items:center;
+    border-bottom: 2px solid #ffffff;
+    background-color: #000000;
+    height:37px;
+}
+
+.encabezadoVentana span{
+    color: white;
+    font-weight: bold;
+}
+
+.btn{
+    border:0;
+    background: none;
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+    border: 2px solid rgb(228, 18, 165);
+    padding: 14px 40px;
+    width: 200px;
+    outline: none;
+    color: white;
+    transition: 0.25s;
+}
+
+/* Cuando pasas el botón por encima del botón submit del formulario de.formulario */
+.btn:hover{
+    background-color:rgb(228, 18, 165);
 }
