--- a/View/css/listadoPersonajes.css
+++ b/View/css/listadoPersonajes.css
@@ -33,9 +33,9 @@
     width: 250px;
 }
 
+/* Estilo de la ventana modal de las estadísticas */
 .ventanaModal{
     width: 300px;
-    height: 280px;
     background-color: #494747fb;
     opacity: 0.7;
     visibility: hidden;
@@ -44,6 +44,7 @@
     color: white;
 }
 
+/* Estilo de cada una de las stats dentro de la ventana */
 .ventanaModal .contenedorStats .stats{
     display: flex;
     flex-direction: row;
@@ -66,21 +67,6 @@
     margin:20px;
 }
 
-.encabezadoVentana{
-    display: flex;
-    flex-direction: row;
-    justify-content:center;
-    align-items:center;
-    border-bottom: 2px solid #ffffff;
-    background-color: #000000;
-    height:37px;
-}
-
-.encabezadoVentana span{
-    color: white;
-    font-weight: bold;
-}
-
 .btn{
     border:0;
     background: none;
@@ -98,4 +84,52 @@
 /* Cuando pasas el botón por encima del botón submit del formulario de.formulario */
 .btn:hover{
     background-color:rgb(228, 18, 165);
+}
+
+/* Estilo de la ventana modal de las habilidades */
+.ventanaModalHabilidades{
+    width: 700px;
+    background-color: #494747fb;
+    opacity: 0.7;
+    visibility: hidden;
+    position: fixed;
+    left: 30%;
+    color: white;
+    top: 10%;
+}
+
+/* Encabezado de las ventana modal */
+.encabezadoVentana{
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
+    align-items:center;
+    border-bottom: 2px solid #ffffff;
+    background-color: #000000;
+    height:37px;
+}
+
+.encabezadoVentana span{
+    color: white;
+    font-weight: bold;
+}
+
+.ventanaModalHabilidades .contenedorHabilidades{
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    flex-wrap: wrap;
+}
+
+.ventanaModalHabilidades .contenedorHabilidades .nombreHabilidad{
+    color: rgb(228, 18, 165);
+    margin-right: 10px;
+    font-weight: bold;
+    width: 70px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+} 
+
+.ventanaModalHabilidades .contenedorHabilidades #tabla{
+    border-color: white;
+    text-align: center;
 }
