--- a/View/css/listadoPersonajes.css
+++ b/View/css/listadoPersonajes.css
@@ -144,8 +144,11 @@
     color: rgb(228, 18, 165);
     margin-right: 10px;
     font-weight: bold;
-    width: 70px;
+    width: 90px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 } 
 
 .ventanaModalHabilidades .contenedorHabilidades #tabla{
