--- a/View/css/paginaHistoria.css
+++ b/View/css/paginaHistoria.css
@@ -21,3 +21,22 @@ body{
     justify-content: end;
     align-items: flex-end;
 }
+
+.btnNegro{
+    border:0;
+    background: none;
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+    border: 2px solid black;
+    padding: 14px 40px;
+    width: 200px;
+    outline: none;
+    color: black;
+    transition: 0.25s;
+}
+
+.btnNegro:hover{
+    background-color:black;
+    color: white;
+}
