--- a/View/css/combate.css
+++ b/View/css/combate.css
@@ -7,9 +7,9 @@ body{
 .containerEnemigo{
     height: 48vh;
     display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
 }
 
 .enemigo{
@@ -19,6 +19,22 @@ body{
     margin-right: 28px;
 }
 
+.containerEnemigo .vida{
+    margin-right: 30px;
+}
+
+.containerEnemigo p{
+    color: red;
+    border-radius: 15px;
+    text-align: center;
+    font-weight: bold;
+}
+
+.containerEnemigo p img{
+    margin-right: 10px;
+    width: 20px;
+    height: 20px;
+}
 /* Estilo de la parte del jugador y su personaje */
 .menuJugador{
     width: 100vw;
@@ -37,8 +53,25 @@ body{
     align-items: center;
 }
 
+.vida{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .menuJugador .personaje p{
-    color: white;
+    color: red;
+    border-radius: 15px;
+    padding: 3px;
+    text-align: center;
+    font-weight: bold;
+}
+
+.menuJugador .personaje p img{
+    margin-left: 0;
+    margin-right: 10px;
+    width: 20px;
+    height: 20px;
 }
 
 .menuJugador .personaje img{
@@ -62,6 +95,26 @@ body{
     align-items: center;
     margin-bottom: 15px;
     width: 70%;
+}
+
+.datosPersonaje .stats .pm{
+    color: white;
+    margin-right: 5px;
+    font-weight: bold;
+    background-color: rgb(0, 110, 255);
+    border-radius: 15px;
+    padding: 3px;
+    text-align: center;
+}
+
+.datosPersonaje .stats .ph{
+    font-weight: bold;
+    background-color: rgb(17, 212, 17);
+    color: white;
+    margin-right: 5px;
+    border-radius: 15px;
+    padding: 3px;
+    text-align: center;
 }
 
 .datosPersonaje .textoCombate{
@@ -96,4 +149,104 @@ body{
     padding: 10px;
     margin: 0;
 
+}
+
+/* Estilo de la ventana modal de las estadísticas */
+.ventanaModal{
+    width: 300px;
+    background-color: #494747fb;
+    visibility: hidden;
+    position: fixed;
+    color: white;
+    bottom:45%;
+    left:5%;
+}
+
+/* Estilo de cada una de las stats dentro de la ventana */
+.ventanaModal .contenedorStats .stats{
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 10px;
+    align-items: center;
+}
+
+.ventanaModal .contenedorStats .stats img{
+    margin-right: 10px;
+}
+
+.ventanaModal .contenedorStats .stats .textoStat{
+    margin-right: 10px;
+    font-weight: bold;
+}
+
+.ventanaModal .contenedorStats{
+    display: flex;
+    flex-direction: column;
+    margin:20px;
+}
+
+.pm{
+    color: rgb(0, 110, 255);
+    margin-right: 5px;
+}
+
+.ph{
+    color: rgb(17, 212, 17);
+    margin-right: 5px;
+}
+
+.encabezadoVentana{
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
+    align-items:center;
+    border-bottom: 2px solid #ffffff;
+    background-color: #000000;
+    height:37px;
+}
+
+.encabezadoVentana span{
+    color: white;
+    font-weight: bold;
+}
+
+
+.ventanaModalHabilidades{
+    width: 700px;
+    background-color: #494747fb;
+    visibility: hidden;
+    position: fixed;
+    color: white;
+    bottom:35%;
+    left:20%;
+}
+
+.ventanaModalHabilidades .contenedorHabilidades{
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    flex-wrap: wrap;
+}
+
+.ventanaModalHabilidades .contenedorHabilidades .nombreHabilidad{
+    color: rgb(0, 255, 255);
+    margin-right: 10px;
+    font-weight: bold;
+    width: 90px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+} 
+
+.ventanaModalHabilidades .contenedorHabilidades #tabla{
+    border-color: white;
+    text-align: center;
+}
+
+.btnStats{
+    background-color: white;
+    border: 2px solid black;
+    color: black;
+    padding:10px;
 }
