--- a/View/css/combate.css
+++ b/View/css/combate.css
@@ -239,6 +239,19 @@ body{
     align-items: center;
 } 
 
+.ventanaModalHabilidades .contenedorHabilidades .btnHabilidad{
+    color: rgb(0, 255, 255);
+    margin-right: 10px;
+    font-weight: bold;
+    width: 90px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: transparent;
+    border: none;
+} 
+
 .ventanaModalHabilidades .contenedorHabilidades #tabla{
     border-color: white;
     text-align: center;
@@ -249,4 +262,36 @@ body{
     border: 2px solid black;
     color: black;
     padding:10px;
+}
+
+@media (max-width: 768px) {
+    .enemigo{
+        margin: 0 auto;
+        width: 200px;
+        height: 250px;
+    }
+
+    .containerEnemigo .vida{
+        margin: 0 auto;
+    }
+
+    .personaje img{
+        display: none;
+    }
+
+    .datosPersonaje .pm span, .datosPersonaje .ph span{
+        visibility: hidden;
+    }
+
+    .datosPersonaje .stats .pm, .datosPersonaje .stats .ph{
+        background-color:transparent;
+    }
+
+    .datosPersonaje .stats .pm{
+        color: rgb(0, 110, 255);
+    }
+
+    .datosPersonaje .stats .ph{
+        color: rgb(17, 212, 17);
+    }
 }
