--- a/View/css/paginaHistoria.css
+++ b/View/css/paginaHistoria.css
@@ -13,6 +13,7 @@ body{
     opacity: 0.6;
     margin-top: 10%;
     border: 2px solid white;
+    color: white;
 }
 
 .contenedorPrincipal{
@@ -40,3 +41,11 @@ body{
     background-color:black;
     color: white;
 }
+
+
+@media (max-width: 768px) {
+    .contenedorPrincipal form{
+        margin: 0 auto;
+    }
+}
+
