--- a/View/css/paginaPrincipal.css
+++ b/View/css/paginaPrincipal.css
@@ -128,6 +128,10 @@ header #cerrarSesion{
     margin-left: 70px;
 }
 
+.nombreMision{
+    color:rgb(228, 18, 165);
+}
+
 .fin{
     display: flex;
     flex-direction: row;
@@ -221,7 +225,10 @@ select option{
     background-color:#3499db;
 }
 
-
+.mision .info .dificultad{
+    display:flex;
+    flex-wrap: wrap;
+}
 
 @media (max-width: 650px) {
     header{
