--- a/View/css/combate.css
+++ b/View/css/combate.css
@@ -13,10 +13,10 @@ body{
 }
 
 .enemigo{
-    height: 30vh;
-    width: 20vw;
-    background-color: blue;
+    height: 40vh;
+    width: 23.42vw;
     margin-right: 28px;
+
 }
 
 .containerEnemigo .vida{
@@ -101,19 +101,16 @@ body{
     color: white;
     margin-right: 5px;
     font-weight: bold;
-    background-color: rgb(0, 110, 255);
-    border-radius: 15px;
-    padding: 3px;
+    color: rgb(0, 110, 255);
+    padding: 6px;
     text-align: center;
 }
 
 .datosPersonaje .stats .ph{
     font-weight: bold;
-    background-color: rgb(17, 212, 17);
-    color: white;
+    color: rgb(17, 212, 17);
     margin-right: 5px;
-    border-radius: 15px;
-    padding: 3px;
+    padding: 6px;
     text-align: center;
 }
 
@@ -137,7 +134,7 @@ body{
     background-color: white;
 }
 
-.menuCombate .habilidades, .menuCombate .ataqueNormal, .menuCombate .defender{
+.menuCombate .habilidades, .menuCombate .ataqueNormal, .menuCombate .defender, .menuCombate .habilidades, .menuCombate .abandonar{
     border: 1px solid black;
 }
 
@@ -256,6 +253,11 @@ body{
     border-color: white;
     text-align: center;
 }
+
+.ventanaModalHabilidades .contenedorHabilidades button:disabled{
+    color:grey;
+}
+
 
 .btnStats{
     background-color: white;
