--- a/View/css/crearPersonaje.css
+++ b/View/css/crearPersonaje.css
@@ -40,12 +40,9 @@ header .container{
 header .formularios{
     display: flex;
     flex-direction: row;
-    margin-left: -100px;
+    width: 50%;
 }
 
-header .formularios form{
-    margin:20px;
-}
 
 .btnUsuario{
     border: transparent;
@@ -200,29 +197,6 @@ label[for=fotoPersonaje]:before {
 }
 
 @media (max-width: 768px) {
-    header{
-        height: 315px;
-    }
-
-    header{
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
-
-    header .container img{
-        height: 160px;
-        width: 190px;
-    }
-
-    header .formularios{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 0 auto;
-    }
-
     .formulario .informacionFormulario{
         margin-right: 10px;
     }
