--- a/View/css/listadoPersonajes.css
+++ b/View/css/listadoPersonajes.css
@@ -171,33 +171,18 @@
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
-@media (max-width: 768px) {
-    header{
-        height: 315px;
+@media (max-width: 768px){
+    .ventanaModal{
+        top: 10%;
+        left: 20%;
+    }
+    
+    .ventanaModalHabilidades{
+        top: 10%;
+        left: 10%;
+        width: 430px;
+        height: 300px;
+        overflow-y: scroll;
     }
 
-    header{
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
-
-    header .container img{
-        height: 160px;
-        width: 190px;
-    }
-
-    header .formularios{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 0 auto;
-    }
-}
-
-@media (min-width: 768px) and (max-width: 900px){
-    header .formularios .btn{
-        width: 150px;
-    }
 }
