--- a/View/css/modificarUsuario.css
+++ b/View/css/modificarUsuario.css
@@ -70,61 +70,8 @@ h1{
     justify-content: center;
 }
 
-header{
-    background-color: #3b3a3a;
-    height: 70px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    align-items: center;
-    font-family: sans-serif;
-    justify-content: space-between;
-    text-align: center;
-}
-
-p{
-    color: white;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-header .oro{
-    color: white;
-    margin-right: 13px;
-}
-header .container{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-left: 10px;
-}
-
-header .formularios{
-    display: flex;
-    flex-direction: row;
-    margin-left: -100px;
-}
-
-header .formularios form{
-    margin:20px;
-}
-
-.btnUsuario{
-    border: transparent;
-    background-color: transparent;
-    color: #3498db;
-    
-}
-/* Botones en el header */
-header .btn{
-    border:0;
-    background: none;
-    margin: 20px auto;
-    text-align: center;
-    border: 2px solid rgb(228, 18, 165);
-    padding: 14px 10px;
-    width: 200px;
-    outline: none;
-    color: white;
-    border-radius: 24px;
-    transition: 0.5s;
+@media (max-width: 768px) {
+    h1{
+        text-align: center;
+    }
 }
