--- a/View/css/paginaPrincipal.css
+++ b/View/css/paginaPrincipal.css
@@ -43,10 +43,10 @@ header .container{
 }
 
 header .formularios{
-    width: 500px;
+    width: 50%;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 /* Botones en el header */
 header .btn{
@@ -170,7 +170,7 @@ header #cerrarSesion{
     flex-direction: column;
 }
 
-.ventanaModal .encabezadoVentanaModal{
+.encabezadoVentanaModal{
     display: flex;
     flex-direction: row;
     justify-content:space-around;
@@ -230,9 +230,54 @@ select option{
     flex-wrap: wrap;
 }
 
-@media (max-width: 650px) {
+.encabezadoVentanaAyuda{
+    display: flex;
+    flex-direction: row;
+    justify-content:space-between;
+    align-items:center;
+    border-bottom: 2px solid #ffffff;
+    background-color: #000000;
+    height:37px;
+    width: 100%;
+    font-size: medium;
+    font-weight: bold;
+}
+
+.encabezadoVentanaAyuda span{
+    margin-left: 20px;
+}
+
+.encabezadoVentanaAyuda h3{
+    margin-left: 20px;
+}
+
+.encabezadoVentanaAyuda img{
+    margin-right: 20px;
+}
+
+.ventanaModalAyuda{
+    background-color: #494747fb;
+    width: 50%;
+    visibility: hidden;
+    position: fixed;
+    color: white;
+    left:20%;
+    top:5%;
+}
+
+.ventanaModalAyuda .infoAyuda{
+    margin:10px;
+    text-align: center;
+}
+
+.ventanaModalAyuda .infoAyuda b{
+    display: flex;
+    justify-content: center;
+    color: rgb(228, 18, 165);
+}
+@media (max-width: 768px) {
     header{
-        height: 300px;
+        height: 500px;
     }
 
     header{
@@ -245,5 +290,25 @@ select option{
     header .container img{
         height: 160px;
         width: 190px;
+    }
+
+    header .formularios{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .ventanaModalAyuda{
+        top: 10%;
+        width: 400px;
+        height: 395px;
+        left: 5%;
+        overflow-y: scroll;
+    }
+
+    .ventanaModal{
+        top: 10%;
+        left: 5%;
     }
 }
